// Produced by Acceleo JavaScript Generator 1.1.2
import "../ccsds_mal/BOOLEAN.proto";
import "../ccsds_mal/INTEGER.proto";
import "../ccsds_mal/NamedValue.proto";
import "../ccsds_mal/STRING.proto";
import "../ccsds_mal/TIME.proto";
import "../ccsds_mal/ULONG.proto";
import "./OpAlertClosingData.proto";
import "./OpAlertConfiguration.proto";
import "./Status.proto";

package opAlert.protobuf;

message OpAlert {
extensions 11 to 111;

  optional ccsds_mal.protobuf.STRING onCallOperator = 1;
  optional ccsds_mal.protobuf.NamedValue specificAttributes = 2;
  optional ccsds_mal.protobuf.BOOLEAN closingNeeded = 3;
  optional opAlert.protobuf.OpAlertConfiguration alertConfiguration = 4;
  optional opAlert.protobuf.Status status = 5;
  optional ccsds_mal.protobuf.TIME lastCallDate = 6;
  optional opAlert.protobuf.OpAlertClosingData alertClosingData = 7;
  optional ccsds_mal.protobuf.INTEGER numberCalls = 8;
  optional ccsds_mal.protobuf.TIME creationDate = 9;
  optional ccsds_mal.protobuf.ULONG satellite = 10;
}
